# taskflow

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 19a101a6aad2_initial_schema.py  a1b2c3d4e5f6_add_checklist_and_comments.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: activity.py  auth.py  boards.py  checklist.py  columns.py  comments.py  labels.py  tasks.py  ws.py
backend/app/core/: config.py  errors.py  rate_limit.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  activity.py  board.py  checklist_item.py  column.py  comment.py  label.py  task.py  user.py
backend/app/repositories/: activity_repo.py  board_repo.py  checklist_repo.py  column_repo.py  comment_repo.py  label_repo.py  task_repo.py  user_repo.py
backend/app/schemas/: activity.py  auth.py  board.py  checklist.py  column.py  comment.py  label.py  task.py
backend/app/services/: auth_service.py  board_service.py  checklist_service.py  column_service.py  comment_service.py  label_service.py  realtime.py  task_service.py
backend/app/websockets/: manager.py
backend/tests/: conftest.py  test_activity.py  test_auth.py  test_boards.py  test_checklist.py  test_comments.py  test_labels.py  test_members.py  test_permissions.py  test_tasks.py  test_websocket.py
(+166 files in other folders)
