[project]
name = "taskflow-backend"
version = "1.0.0"
description = "TaskFlow real-time kanban — FastAPI backend"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["app"]
omit = ["app/main.py", "alembic/*"]

[tool.ruff]
line-length = 90
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "PLC"]
ignore = ["B008"]  # FastAPI uses function calls (Depends) in argument defaults

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
